codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_plan_step codex_agent_plan_step_t;
typedef struct codex_agent_plan_progress codex_agent_plan_progress_t;
typedef struct codex_agent_hook_activity codex_agent_hook_activity_t;
typedef struct codex_agent_turn_progress codex_agent_turn_progress_t;
typedef int32_t codex_agent_plan_step_status_t;
typedef int32_t codex_agent_hook_run_status_t;
typedef int32_t codex_agent_work_activity_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plan_step_destroy(
    codex_agent_context_t *context,
    codex_agent_plan_step_t **step);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plan_step_text_copy(
    codex_agent_context_t *context,
    codex_agent_plan_step_t *step,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plan_step_status(
    codex_agent_context_t *context,
    codex_agent_plan_step_t *step,
    codex_agent_plan_step_status_t *out_status);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plan_progress_destroy(
    codex_agent_context_t *context,
    codex_agent_plan_progress_t **progress);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plan_progress_has_explanation(
    codex_agent_context_t *context,
    codex_agent_plan_progress_t *progress,
    int32_t *out_has_explanation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plan_progress_explanation_copy(
    codex_agent_context_t *context,
    codex_agent_plan_progress_t *progress,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plan_progress_steps_count(
    codex_agent_context_t *context,
    codex_agent_plan_progress_t *progress,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plan_progress_step_at(
    codex_agent_context_t *context,
    codex_agent_plan_progress_t *progress,
    size_t index,
    codex_agent_plan_step_t **out_step);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_destroy(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t **activity);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_id_copy(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t *activity,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_event_name_copy(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t *activity,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_handler_type_copy(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t *activity,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_status(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t *activity,
    codex_agent_hook_run_status_t *out_status);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_has_status_message(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t *activity,
    int32_t *out_has_status_message);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_status_message_copy(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t *activity,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_details_count(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t *activity,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_activity_detail_copy_at(
    codex_agent_context_t *context,
    codex_agent_hook_activity_t *activity,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_destroy(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t **progress);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_text_copy(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_commentary_copy(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_reasoning_copy(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_plan_copy(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_has_plan_progress(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    int32_t *out_has_plan_progress);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_plan_progress(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    codex_agent_plan_progress_t **out_plan_progress);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_shell_output_copy(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_shell_exit_code(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    int32_t *out_has_shell_exit_code,
    int32_t *out_shell_exit_code);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_work_activity(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    int32_t *out_has_work_activity,
    codex_agent_work_activity_t *out_work_activity);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_hook_activities_count(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_hook_activity_at(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    size_t index,
    codex_agent_hook_activity_t **out_activity);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_progress_is_truncated(
    codex_agent_context_t *context,
    codex_agent_turn_progress_t *progress,
    int32_t *out_is_truncated);