codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeConversationMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressDestroy(nint context, ref nint progress);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_text_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressTextCopy(nint context, nint progress, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_commentary_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressCommentaryCopy(nint context, nint progress, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_reasoning_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressReasoningCopy(nint context, nint progress, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_plan_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressPlanCopy(nint context, nint progress, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_has_plan_progress")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressHasPlanProgress(nint context, nint progress, out int present);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_plan_progress")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressPlanProgress(nint context, nint progress, out nint planProgress);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_shell_output_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressShellOutputCopy(nint context, nint progress, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_shell_exit_code")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressShellExitCode(nint context, nint progress, out int present, out int value);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_work_activity")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressWorkActivity(nint context, nint progress, out int present, out CodexWorkActivity value);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_hook_activities_count")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressHookActivitiesCount(nint context, nint progress, out nuint count);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_hook_activity_at")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressHookActivityAt(nint context, nint progress, nuint index, out nint activity);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_progress_is_truncated")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnProgressIsTruncated(nint context, nint progress, out int value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_plan_progress_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PlanProgressDestroy(nint context, ref nint progress);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_plan_progress_has_explanation")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PlanProgressHasExplanation(nint context, nint progress, out int present);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_plan_progress_explanation_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PlanProgressExplanationCopy(nint context, nint progress, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_plan_progress_steps_count")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PlanProgressStepsCount(nint context, nint progress, out nuint count);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_plan_progress_step_at")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PlanProgressStepAt(nint context, nint progress, nuint index, out nint step);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_plan_step_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PlanStepDestroy(nint context, ref nint step);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_plan_step_text_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PlanStepTextCopy(nint context, nint step, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_plan_step_status")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PlanStepStatus(nint context, nint step, out CodexPlanStepStatus status);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityDestroy(nint context, ref nint activity);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_id_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityIdCopy(nint context, nint activity, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_event_name_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityEventNameCopy(nint context, nint activity, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_handler_type_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityHandlerTypeCopy(nint context, nint activity, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_status")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityStatus(nint context, nint activity, out CodexHookRunStatus status);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_has_status_message")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityHasStatusMessage(nint context, nint activity, out int present);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_status_message_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityStatusMessageCopy(nint context, nint activity, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_details_count")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityDetailsCount(nint context, nint activity, out nuint count);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_hook_activity_detail_copy_at")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookActivityDetailCopyAt(nint context, nint activity, nuint index, byte* buffer, nuint capacity, out nuint required);
}
